# simpleFactory2d

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  license
src/: main.cpp
src/assets/: assetsID.hpp  assetsPath.hpp
src/core/ids/: assetsID.hpp  tileID.hpp
src/core/paths/: assetsPath.hpp  tilesPaths.hpp
src/core/timer/: timer.cpp  timer.hpp
src/entities/: entitiesHandler.cpp  entitiesHandler.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp  tile.hpp
src/entities/handlers/: entitiesHandler.cpp  entitiesHandler.hpp  handlers.drawio
src/entities/player/: player.cpp  player.drawio  player.hpp
src/entities/primitive/: entity.cpp  entity.hpp  tile.cpp
src/game/: simpleFactory.cpp  simpleFactory.drawio  simpleFactory.hpp
src/logic/: event.cpp  event.hpp  sdlInput.cpp  sdlInput.hpp
src/logic/Systems/: health.cpp  health.hpp  movement.cpp  movement.hpp
src/logic/input/: inputManager.cpp  inputManager.hpp
src/logic/movement/: movement.cpp  movement.hpp
src/logic/systems/: collision.cpp  collision.hpp  health.cpp  health.hpp  movement.cpp  movement.hpp  playerMovement.cpp  playerMovement.hpp
src/main/: main.cpp  main.drawio
src/platform/: platform.drawio  sdlContext.hpp  sdlWindow.hpp  sfmlWindow.cpp  sfmlWindow.hpp
src/platform/events/: sdlEvents.cpp  sdlEvents.hpp
src/platform/rendering/: renderManager.cpp  renderManager.hpp  textureManager.cpp  textureManager.hpp  textureManager.tpp
src/platform/window/: sdlContext.hpp  sdlWindow.cpp  sdlWindow.hpp
